[package]
name = "gms"
description = "A powerful live server by Rust ."
version = "0.0.11"
authors = ["HarlanC <wawacry@qq.com"]
repository = "https://github.com/guaclive/gms"
license = "MIT"
readme = "README.md"
categories = ["multimedia", "multimedia::video", 'multimedia::audio']
keywords = ["rtmp", "hls", "httpflv", "video", "streaming"]
edition = "2021"
[dependencies]
toml = "^0.5"
serde_derive = "^1"
serde = { version = "^1", optional = true, features = ["derive"] }
anyhow = "^1"
tracing = "^0.1"
tracing-subscriber = "^0.3"
chrono = "^0.4"
failure = "^0.1"
clap = { version = "^4", features = [ "derive" ]}

rtmp = {path = "../../protocol/rtmp/"}
httpflv = {path = "../../protocol/httpflv/"}
hls = {path = "../../protocol/hls/"}

[features]
default = ["std"]
std = [ "serde" ]

[dependencies.tokio]
version = "^1"
default-features = false
#features = ["rt-core", "rt-threaded", "macros", "time","sync"]
features = ["full"]