[package]
name = "gms"
description = "A secure and easy to use live media server"
version = "0.5.0"
authors = ["Thomas Lekanger <datagutt@lekanger.no"]
repository = "https://github.com/guaclive/gms"
license = "MIT"
readme = "README.md"
categories = ["multimedia", "multimedia::video", 'multimedia::audio']
keywords = ["rtmp", "hls", "httpflv", "video", "streaming"]
edition = "2021"
[dependencies]
toml = "^0.7"
serde_derive = "^1"
serde = { version = "^1", optional = true, features = ["derive"] }
anyhow = "^1"
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = [ "env-filter", "json" ] }
tracing-log = "^0.1"
chrono = "^0.4"
failure = "^0.1"
clap = { version = "^4", features = [ "derive" ]}
libc = "0.2.141"
serde_json = { version = "1", default-features = false, features = [
    "alloc",
    "raw_value",
    "std",
] }
axum = "^0.6"

rtmp = {path = "../../protocol/rtmp/"}
httpflv = {path = "../../protocol/httpflv/"}
hls = {path = "../../protocol/hls/"}

[features]
default = ["std"]
std = [ "serde" ]

[dependencies.tokio]
version = "^1"
default-features = false
#features = ["rt-core", "rt-threaded", "macros", "time","sync"]
features = ["full"]