[package]
name = "xiu"
description = "A powerful live server by Rust ."
version = "0.0.11"
authors = ["HarlanC <wawacry@qq.com"]
repository = "https://github.com/harlanc/xiu"
license = "MIT"
readme = "README.md"
categories = ["multimedia", "multimedia::video", 'multimedia::audio']
keywords = ["rtmp", "hls", "httpflv", "video", "streaming"]
edition = "2018"
[dependencies]
toml = "^0.5"
serde_derive = "1"
serde = { version = "^1", optional = true, features = ["derive"] }
anyhow = "^1"
log = "0.4.0"
env_logger = "0.10"
flexi_logger = "0.22"
chrono = "0.4"
failure = "0.1.1"
clap = { version = "^3", features = [ "derive" ]}

rtmp = {path = "../../protocol/rtmp/"}
httpflv = {path = "../../protocol/httpflv/"}
hls = {path = "../../protocol/hls/"}

[features]
default = ["std"]
std = [ "serde" ]

[dependencies.tokio]
version = "^1"
default-features = false
#features = ["rt-core", "rt-threaded", "macros", "time","sync"]
features = ["full"]