[package]
name = "hls"
description = "hls library."
version = "1.1.0"
authors = ["HarlanC <wawacry@qq.com"]
repository = "https://github.com/guaclive/gms"
license = "MIT"
readme = "README.md"
categories = ["multimedia", "multimedia::video", 'multimedia::audio']
keywords = ["hls", "video", "streaming"]
edition = "2021"

[dependencies]
anyhow = "^1"
byteorder = "^1"
bytes = "^1"
failure = "^0.1"
tracing = "^0.1"
uuid = { version = "^1.2", features = ["v4"] }
url = "^2"

xflv = {path = "../../library/container/flv/"}
rtmp = {path = "../rtmp/"}
xmpegts = {path = "../../library/container/mpegts/"}


hyper = { version = "^0.14", features = ["full"] }
tokio-util = { version = "^0.7", features = ["codec"] }

[dependencies.tokio]
version = "^1"
default-features = false
features = ["full"]
