[package]
name = "httpflv"
description = "httpflv library."
version = "1.0.0"
authors = ["HarlanC <wawacry@qq.com"]
repository = "https://github.com/guaclive/gms"
license = "MIT"
readme = "README.md"
categories = ["multimedia", "multimedia::video", 'multimedia::audio']
keywords = ["httpflv", "video", "streaming"]
edition = "2018"

[dependencies]
byteorder = "1.4.2"
bytes = "1.0.0"
failure = "0.1.1"
tracing = "^0.1"
uuid = { version = "^1.2", features = ["v4"] }

xflv = {path = "../../library/container/flv/"}
rtmp = {path = "../rtmp/"}#"0.0.4"
hyper = { version = "0.14", features = ["full"] }
futures = "0.3"

xflv = "1.0.0"
rtmp = "1.0.0"
#xflv = { path = "../../library/container/flv/" }
#rtmp = { path = "../rtmp/" } #"0.0.4"

[dependencies.tokio]
version = "^1"
default-features = false
features = ["full"]
