[package]
name = "rtmp"
description = "rtmp library."
version = "0.0.14"
authors = ["HarlanC <wawacry@qq.com"]
repository = "https://github.com/guaclive/gms"
license = "MIT"
readme = "README.md"
categories = ["multimedia", "multimedia::video", 'multimedia::audio']
keywords = ["rtmp", "video", "streaming"]
edition = "2021"

[dependencies]
byteorder = "^1.4"
bytes = "^1.2"
rand = "^0.6"
failure = "^0.1"
hmac = "^0.12"
sha2 = "^0.10"
uuid = { version = "^1.2", features = ["v4"] }
hyper = { version = "^0.14", features = ["full"] }
serde_derive = "1"
serde = { version = "^1", optional = true, features = ["derive"] }
rustls = "^0.20"
hyper-rustls = "^0.23"

bytesio = {path = "../../library/bytesio/"}
xflv = {path = "../../library/container/flv/"}


tokio-util = { version = "^0.7", features = ["codec"] }
tracing = "^0.1"
chrono = "^0.4"

[features]
default = ["std"]
std = [ "serde" ]

[dependencies.tokio]
version = "^1"
default-features = false
features = ["full"]